--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # игнорировать папку objects. она создаётся во время сборки словаря
-objects/
+objects_bkrs/*
+objects_bruks/*
 
 # игнорировать бинарники питона
 *.pyc
@@ -11,3 +12,10 @@ bkrs.xml
 
 # игнорировать исходный словарь. его последнюю версию можно загрузить с сайта bkrs.info
 *.dsl
+
+# игнорировать паку со сжатыми сконвертированными словарями
+/final/
+
+# sublime text'овские файлы
+*.sublime-project
+*.sublime-workspace
