--- a/bkrsInfo.plist
+++ b/bkrsInfo.plist
@@ -5,13 +5,13 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>Ukraine</string>
 	<key>CFBundleDisplayName</key>
-	<string>大БРуКС</string>
+	<string>大БКРС</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.ratijas.dictionary.bruks</string>
+	<string>com.ratijas.dictionary.bkrs</string>
 	<key>CFBundleName</key>
-	<string>大БРуКС</string>
+	<string>大БКРС</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.60</string>
+	<string>1.61</string>
 	<key>DCSDictionaryCopyright</key>
 	<string>Копилефт (англ. copyleft) (Ɔ) 2014 Ratijas &amp; Mac-J studio</string>
 	<key>DCSDictionaryManufacturerName</key>
@@ -19,9 +19,9 @@
 	<key>DCSDictionaryFrontMatterReferenceID</key>
 	<string>front_back_matter</string>
 	<key>DCSDictionaryPrefsHTML</key>
-	<string>bruks_prefs.html</string>
+	<string>bkrs_prefs.html</string>
 	<key>DCSDictionaryXSL</key>
-	<string>bruks.xsl</string>
+	<string>bkrs.xsl</string>
 	<key>DCSDictionaryDefaultPrefs</key>
 	<dict>
 		<key>color_mode</key>
