--- a/bkrs/bkrsInfo.plist
+++ b/bkrs/bkrsInfo.plist
@@ -3,15 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>Ukraine</string>
+	<string>{{DevelopmentRegion}}</string>
 	<key>CFBundleDisplayName</key>
-	<string>大БКРС ч.1</string>
+	<string>{{BundleDisplayName}}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.ratijas.dictionary.bkrs1</string>
+	<string>{{BundleIdentifier}}</string>
 	<key>CFBundleName</key>
-	<string>大БКРС ч.1</string>
+	<string>{{BundleName}}</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.61</string>
+	<string>{{BundleShortVersionString}}</string>
 	<key>DCSDictionaryCopyright</key>
 	<string>Копилефт (англ. copyleft) (Ɔ) 2014 Ratijas &amp; Mac-J studio</string>
 	<key>DCSDictionaryManufacturerName</key>
@@ -19,9 +19,9 @@
 	<key>DCSDictionaryFrontMatterReferenceID</key>
 	<string>front_back_matter</string>
 	<key>DCSDictionaryPrefsHTML</key>
-	<string>bkrs_prefs.html</string>
+	<string>{{PrefsHTML}}</string>
 	<key>DCSDictionaryXSL</key>
-	<string>bkrs.xsl</string>
+	<string>{{XSL}}</string>
 	<key>DCSDictionaryDefaultPrefs</key>
 	<dict>
 		<key>color_mode</key>
