half-automatic, not tested

--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,14 @@ objects_bruks/*
 # игнорировать исходный словарь. его последнюю версию можно загрузить с сайта bkrs.info
 *.dsl
 
+# загрузка свежей версии
+**/downloads/
+
 # игнорировать паку со сжатыми сконвертированными словарями
 **/final/
+
+# логи
+*.log
 
 # sublime text'овские файлы
 *.sublime-project
